@@ -4,6 +4,7 @@
 - Fix TMDbHelper info in OSD
 - Fix for too long studio/language tags
 - Fix for too long filepath
+- Fixed movement option for widgets
 
 0.9.50
 - Fix for small landscape and small square widget text
